# aws-doc-sdk-examples

./: .gitignore
.doc_gen/cross-content/: cli_sns_CreateTopic_block.xml
.doc_gen/metadata/: firehose_metadata.yaml  lambda_metadata.yaml  s3_metadata.yaml  sdks.yaml  services.yaml  sns_metadata.yaml  sts_metadata.yaml
.doc_gen/titles/: .aillyrc  CreateProject.md  DescribeComputeEnvironments.md  ExecuteStatement.md  ListHostedZones.md  ListIdentityPoolUsage.md  ListInputs.md  PostToConnection.md  PutRecordBatch.md  SendVoiceMessage.md  acm.md  api-gateway.md  apigatewaymanagementapi.md  application-autoscaling.md  auditmanager.md  aurora.md  auto-scaling.md  batch.md  bedrock-agent-runtime.md  bedrock-agent.md  bedrock-runtime.md  bedrock.md  cloudformation.md  cloudfront.md  cloudtrail.md  cloudwatch-events.md  cloudwatch-logs.md  cloudwatch.md  codebuild.md  cognito-identity-provider.md  cognito-identity.md  cognito-sync.md  comprehend.md  config-service.md  device-farm.md  dynamodb.md  ebs.md  ec2.md  ecr.md  ecs.md  (+57 more)
.github/workflows/: docker-image.yml  rust.yml
.tools/readmes/: multi.py  render.py  writeme.py
.tools/readmes/includes/: code_examples.py  copyright.py  important.py  macros.py  overview.py  prerequisites.py  resources.py  run_instructions.py  tests.py
.tools/sdk_examples/: README.md  setup.py
.tools/sdk_examples/sdk_examples/: doc_gen.py  metadata.py  metadata_validator.py  sdks.py  services.py  snippets.py
.tools/sdk_examples/sdk_examples.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
.tools/sdk_examples/src/: services.py
.tools/sdk_examples/tests/: test_sdks.py
.tools/validation/: doc_gen.py  metadata.py  metadata_test.py  metadata_validator.py  project_validator.py  project_validator_test.py  requirements.txt  sdks.py  sdks_test.py  services.py  snippets.py  validate.py
aws-cli/bash-linux/ec2/: README.md
aws-cli/bash-linux/iam/: README.md
aws-cli/bash-linux/medical-imaging/: README.md
aws-cli/bash-linux/s3/: README.md
dotnetv3/ACM/: README.md
dotnetv3/Aurora/: README.md
dotnetv3/AutoScaling/: README.md
dotnetv3/CloudWatch/: README.md
dotnetv3/CloudWatchLogs/: README.md
dotnetv3/Comprehend/: README.md
dotnetv3/EC2/: README.md
dotnetv3/ECS/: README.md
dotnetv3/EventBridge/: README.md
dotnetv3/Glue/: README.md
dotnetv3/IAM/: README.md
dotnetv3/KMS/: README.md
dotnetv3/Keyspaces/: README.md
dotnetv3/Kinesis/: README.md
dotnetv3/Lambda/: README.md
dotnetv3/MediaConvert/: README.md
dotnetv3/Organizations/: README.md
dotnetv3/Polly/: README.md
dotnetv3/RDS/: README.md
dotnetv3/Rekognition/: README.md
dotnetv3/S3/: README.md
dotnetv3/SES/: README.md
dotnetv3/SNS/: README.md
dotnetv3/SQS/: README.md
dotnetv3/STS/: README.md
dotnetv3/SageMaker/: README.md
dotnetv3/SecretsManager/: README.md
dotnetv3/Support/: README.md
dotnetv3/Transcribe/: README.md
dotnetv3/Translate/: README.md
dotnetv3/dynamodb/: README.md
gov2/aurora/: README.md
gov2/cloudwatch/: README.md
gov2/codebuild/: README.md
gov2/dynamodb/: README.md
gov2/ec2/: README.md
gov2/iam/: README.md
gov2/kinesis/: README.md
gov2/kms/: README.md
gov2/lambda/: README.md
gov2/rds/: README.md
gov2/rekognition/: README.md
gov2/s3/: README.md
gov2/sns/: README.md
gov2/sqs/: README.md
gov2/ssm/: README.md
gov2/sts/: README.md
python/: .pylintrc.toml  lint.sh  pylint.txt
python/test_tools/: dynamodb_stubber.py  ec2_stubber.py  glue_stubber.py  iam_stubber.py  keyspaces_stubber.py  kms_stubber.py  medical_imaging_stubber.py  rds_stubber.py  s3_stubber.py  s3control_stubber.py  ses_stubber.py  sns_stubber.py  ssm_stubber.py  sts_stubber.py  stubber_factory.py
rust_dev_preview/: Cargo.toml  Dockerfile  README.md  rust-toolchain.toml
rust_dev_preview/aurora/: Cargo.toml
rust_dev_preview/autoscaling/: README.md
rust_dev_preview/cross_service/photo_asset_management/: Cargo.toml  README.md
rust_dev_preview/cross_service/photo_asset_management/src/: common.rs  detect_labels.rs  download.rs  hello.rs  labels.rs  lib.rs  main.rs  upload.rs  uploader.rs
rust_dev_preview/cross_service/photo_asset_management/src/handlers/: detect_labels.rs  download.rs  hello.rs  labels.rs  upload.rs
rust_dev_preview/dynamodb/: Cargo.toml
rust_dev_preview/firehose/: README.md
rust_dev_preview/lambda/: Cargo.toml  README.md
rust_dev_preview/webassembly/: NOTES.md
(+397 files in other folders)
