[package]
name = "photo_asset_management"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
aws-config = "0.55.1"
aws-sdk-dynamodb = "0.26.0"
aws-sdk-rekognition = "0.26.0"
aws-sdk-s3 = "0.26.0"
aws-sdk-sns = "0.26.0"
aws-smithy-types-convert = { version = "0.55.1", features = ["convert-chrono"] }
aws_lambda_events = { version = "0.8.3", features = ["s3", "apigw"] }
bytes = "1.4.0"
chrono = "0.4.24"
futures = "0.3.28"
http = "0.2.9"
lambda_runtime = "0.7.3"
miniz_oxide = "0.7.1"
pin-project = "1.0.12"
pipe = "0.4.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
streaming-zip = "0.5.0"
tokio = { version = "1.27.0", features = ["macros"] }
tokio-stream = "0.1.12"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
uuid = { version = "1.3.1", features = ["v4"] }
