[package]
name = "photo_asset_management"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
aws-config = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "main" }
aws-sdk-dynamodb = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "main" }
aws-sdk-rekognition = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "main" }
aws-sdk-s3 = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "main" }
aws-sdk-sns = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "main" }
aws-smithy-types-convert ={ git = "https://github.com/awslabs/aws-sdk-rust", branch = "main", features = ["convert-chrono"] }
aws_lambda_events = { version = "0.8.3", features = ["s3", "apigw"] }
bytes = "1.4.0"
chrono = "0.4.24"
futures = "0.3.28"
http = "0.2.9"
lambda_runtime = "0.7.3"
miniz_oxide = "0.7.1"
pin-project = "1.0.12"
pipe = "0.4.0"
sdk-examples-test-utils = { path = "../../test-utils" }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
streaming-zip = "0.5.0"
tokio = { version = "1.27.0", features = ["macros"] }
tokio-stream = "0.1.12"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
uuid = { version = "1.3.1", features = ["v4"] }
